1.4.1: fix font size on mobile button

--- a/full/css/main.css
+++ b/full/css/main.css
@@ -1,7 +1,7 @@
 *, *::before, *::after {
     box-sizing: border-box;
 }
-  
+
 body {
     height: 100vh;
     margin: 0;
@@ -403,7 +403,7 @@ main > div {
     }
 
     #clickable > button {
-        font-size: 3vmin;
+        font-size: 4vmin;
     }
 
     #intro {
